Fixing header alignment

--- a/sass/site/header/_header.scss
+++ b/sass/site/header/_header.scss
@@ -19,11 +19,9 @@
 }
 
 .displaymenu {
-    flex:1; 
+    width: 250px;
     margin: auto;
-    margin-left: 2em;
-   
-
+    margin-left: 1em;
 }
 
 .site-branding {
