--- a/style.css
+++ b/style.css
@@ -652,9 +652,9 @@ a {
       background-color: #fff; } }
 
 .displaymenu {
-  flex: 1;
+  width: 250px;
   margin: auto;
-  margin-left: 2em; }
+  margin-left: 1em; }
 
 .site-branding {
   flex: 1;
